syntax = "proto3";
package rpc;

option go_package = "github.com/davidbalbert/chatter/rpc";

service API {
    rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {}
    
    rpc GetInterfaces (GetInterfacesRequest) returns (GetInterfacesResponse) {}
}

message GetVersionRequest {}
message GetVersionResponse {
    string version = 1;
}

message GetInterfacesRequest {}
message GetInterfacesResponse {
    repeated Interface interfaces = 1;
}

message Interface {
    string name = 1;
}
